--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   </head>
   <body>
     <div class="wrap">
-      <h1>Welcome to SHONKUWEBPAY</h1>
+      <h1>Welcome to Shibam</h1>
       <p>Under Development</p>
     </div>
   </body>
