--- a/pay.html
+++ b/pay.html
@@ -17,8 +17,8 @@
 
             <div class="qr-container">
                 <!-- Dynamic QR Code for UPI Payment -->
-                <!-- UPI URL: upi://pay?pa=6295175749-1@okbizaxis&pn=ShonkuWeb&am=10000&cu=INR -->
-                <img src="https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=upi%3A%2F%2Fpay%3Fpa%3D6295175749-1%40okbizaxis%26pn%3DShonkuWeb%26am%3D10000%26cu%3DINR"
+                <!-- UPI URL: upi://pay?pa=6295175749-1@okbizaxis&pn=ShonkuWeb&am=1&cu=INR -->
+                <img src="https://api.qrserver.com/v1/create-qr-code/?size=250x250&data=upi%3A%2F%2Fpay%3Fpa%3D6295175749-1%40okbizaxis%26pn%3DShonkuWeb%26am%3D1%26cu%3DINR"
                     alt="Payment QR Code" class="qr-code">
             </div>
 
