Implement strict session management with reload protection

--- a/pay.html
+++ b/pay.html
@@ -7,6 +7,7 @@
     <title>Payment - ShonkuWeb Pay</title>
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script src="protect.js"></script>
 </head>
 
 <body>
