--- a/index.html
+++ b/index.html
@@ -6,12 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SHONKUWEBPAY</title>
   <link rel="stylesheet" href="style.css">
-  <script>
-    // Check if user is logged in
-    if (!sessionStorage.getItem('isLoggedIn')) {
-      window.location.href = 'login.html';
-    }
-  </script>
+  <script src="protect.js"></script>
 </head>
 
 <body>
